git-svn-id: https://subversion.assembla.com/svn/asejournaltest@3 1321697c-79dc-45c4-979a-cc5522a7f706

--- a/asej_main.tex
+++ b/asej_main.tex
@@ -105,8 +105,8 @@
               \email{xxkidd@zju.edu.cn}
               \and
              Liang Gong \at
-                School of Software, Tsinghua University, Beijing, China\\
-              \email{gongliang10@mails.tsinghua.edu.cn}
+               Electrical Engineering and Computer Sciences, University of California, Berkeley, USA\\
+              \email{gongliang13@eecs.berkeley.edu}
            \and
              Tien-Duy B. Le   \at
               School of Information Systems, Singapore Management University, Singapore\\
